docs(planning): add Companions architecture + reconcile brief/PRD
Architecture deliverable (final, 31 ADs) — spine, walkthrough, decision
memlog, and the 8-lens reviewer gate (reviews/):
- Dual-role runtime: forward/reverse proxy (role config forward|reverse),
  Netty event-loop data plane + StructuredTaskScope/ScopedValue control
  plane (JDK 25 --enable-preview)
- ROPC credential verification, three trust roots, fail-closed default,
  payload-transparent bind->splice, /metrics loopback-only
- Java package smpp.companion.*; Gradle modules codec + proxy;
  config keys companion.*

Brief & PRD reconciled with the architecture:
- "virtual-thread relay" -> "Netty event-loop relay"; Spring Boot named
  as config/DI/lifecycle/Micrometer substrate
- Unified-trust-root -> three trust roots; ROPC hard-dependency in PRD §11;
  /metrics loopback-only (AD-19)
- OQ-4/OQ-11 closed (PKIX defaults; no v1 native-image build)

Co-Authored-By: Claude <noreply@anthropic.com>